--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="container">
     <section class="main row">
         <article class="col-xs-12 col-sm-8 col-md-9 col-lg-9">
-            <h3>Articulo-article</h3>
+            <h3>Articulo-article prueba2</h3>
             <p>
                 Todo el mundo te dice lo que es mejor para ti. No quieren que busques 
                 respuestas sino que creas las suyas. Deja de coleccionar información del
