--- a/index.html
+++ b/index.html
@@ -3,23 +3,36 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="shortcut icon"  href="img/logo.png"  type="image/x-icon">
 <link rel="stylesheet" href="css/estilos.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
  integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>
-        Document
+        Comunidad Estudiantil   
     </title>
 </head>
 <body>
-<header>
-    <div class="container">
-     <h1>header</h1>
-    </div>
-</header>
+
+<div class="miler">
+    <div class="container">   
+     <section class="row">
+    <article class="col-md-3">
+<img src="img/gaceta.png" alt="logo de la gaceta">
+
+
+     </article>
+
+     <miler class="col-md-9">
+        <h3>    EL <br> GACETIS <br> 167</h3>
+     </miler>  
+</section>  
+</div>
+</div> 
+ 
 <div class="container">
     <section class="main row">
         <article class="col-xs-12 col-sm-8 col-md-9 col-lg-9">
-            <h3>Articulo-article prueba2</h3>
+             <h3>Articulo-article</h3>
             <p>
                 Todo el mundo te dice lo que es mejor para ti. No quieren que busques 
                 respuestas sino que creas las suyas. Deja de coleccionar información del
