--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
 <div class="miler">
     <div class="container">   
      <section class="row">
-    <article class="col-md-3">
-<img src="img/gaceta.png" alt="logo de la gaceta">
-
-
+    <article class="col-xs-1  col-sm-2 col-md-2 col-lg-2">
+<img src="img/gaceta.png">
      </article>
 
-     <miler class="col-md-9">
-        <h3>    EL <br> GACETIS <br> 167</h3>
+     <miler class="col-xs-11  col-sm-10 col-md-10 col-lg-10">
+         <h2> 22/22/22 </h2>
+        <hr style="width:100%;height:7px;background-color:rgba(170, 1, 1, 0.856);margin-left:0pt;">
      </miler>  
 </section>  
 </div>
 </div> 
+
  
 <div class="container">
     <section class="main row">
