--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
 <div class="miler">
     <div class="container">   
      <section class="row">
-    <article class="col-xs-1  col-sm-2 col-md-2 col-lg-2">
+    <article class="col-xs-1  col-sm-2 col-md-2 col-lg-1">
 <img src="img/gaceta.png">
      </article>
 
-     <miler class="col-xs-11  col-sm-10 col-md-10 col-lg-10">
+     <miler class="col-xs-11  col-sm-10 col-md-10 col-lg-11">
          <h2> 22/22/22 </h2>
-        <hr style="width:100%;height:7px;background-color:rgba(170, 1, 1, 0.856);margin-left:0pt;">
+        <hr style="width:100%;height:7px;background-color:rgba(170, 1, 1, 0.856);">
      </miler>  
-</section>  
 </div>
 </div> 
+</section>  
 
  
 <div class="container">
     <section class="main row">
         <article class="col-xs-12 col-sm-8 col-md-9 col-lg-9">
-             <h3>Articulo-article</h3>
+             <h1>El</h1>
             <p>
                 Todo el mundo te dice lo que es mejor para ti. No quieren que busques 
                 respuestas sino que creas las suyas. Deja de coleccionar información del
