--- a/index.html
+++ b/index.html
@@ -32,22 +32,19 @@
 <div class="container">
     <section class="main row">
         <article class="col-xs-12 col-sm-8 col-md-9 col-lg-9">
-             <h1>El</h1>
-            <p>
-                Todo el mundo te dice lo que es mejor para ti. No quieren que busques 
-                respuestas sino que creas las suyas. Deja de coleccionar información del
-                exterior y empieza a buscarla por ti mismo en tu interior.
-            </p>
+             <h1>EL</h1>
+             <h1>GACETIS</h1>
+             <h1>167</h1>
+
         </article>
-        <aside class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
-            <h3>Sidebar-anside</h3>
-            <p>
-                Todo el mundo te dice lo que es mejor para ti. No quieren que busques 
-                respuestas sino que creas las suyas. Deja de coleccionar información del
-                exterior y empieza a buscarla por ti mismo en tu interior.         
-            </p>    
-        </aside>
-   </section>     
+        <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
+            <h3>Orgullosamente Tuzos</h3>  
+        </div>
+   </section>
+   <div class="row"></div> 
+   <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3"></div>
+   <h1>Comunidad Estudiantil</h1>    
+
    <div class="row">
        <div class="color1 col-xs-12 col-sm-6 col-md-3 ">
         <h3>
