--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
      </article>
 
      <miler class="col-xs-11  col-sm-10 col-md-10 col-lg-11">
-         <h2> 22/22/22 </h2>
+     <h2><script src="js/fecha.js"></script></h2>
+
+
         <hr style="width:100%;height:7px;background-color:rgba(170, 1, 1, 0.856);">
      </miler>  
 </div>
